istio/authnz/strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mesh-wide-strict-mtls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
