istio/authnz/ext_authz.yaml
# force oauth before accessing the gateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: asm-oauth
  rules:
    - {}
---
